eliminar tarea implementado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,6 @@
 <div class="crearTarea">
   <crear-tarea (insertarTarea)="nuevaTarea($event)"></crear-tarea>
   <div class="lista-tareas">
-    <div class="tareas" *ngFor="let task of tareas; let n = index">
-      <h3>{{ task }}</h3>
-      <p>Tarea número {{ n +1 }}</p>
-    </div>
+    <listado-tareas [arrData]="tareas"></listado-tareas>
   </div>
 </div>
