--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,12 +3,7 @@ header {
     padding: 1em;
     background-image: radial-gradient(ellipse farthest-corner at 45px 45px , #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%);
 }
-.lista-tareas {
+listado-tareas {
     display: flex;
     flex-wrap: wrap;
-}
-.tareas {
-    margin: 0.4em;
-    padding: 0.4em;
-    border: solid black 2px;
 }
