--- a/src/app/listado-tareas/listado-tareas.component.html
+++ b/src/app/listado-tareas/listado-tareas.component.html
@@ -1,5 +1,10 @@
-<div class="tareas" *ngFor="let task of arrData; let n = index">
-  <h3>{{ task }}</h3>
+<div class="tareas {{ task.completada ? 'false' : 'true' }}" *ngFor="let task of arrData; let n = index">
+  <h3>{{ task.text }}</h3>
+  <p>{{ task.id }}</p>
+  <p>Completada: 
+    <span><input type="checkbox" name="tareaCompletada" [(ngModel)]="task.completada"></span>
+    {{ task.completada }}
+  </p>
   <p>Tarea número {{ n +1 }}</p>
   <button (click)="eliminarTarea(task)">Eliminar</button>
 </div>
