filtrar tareas hechas, sin hacer, y todas

--- a/src/app/no-completadas/no-completadas.component.html
+++ b/src/app/no-completadas/no-completadas.component.html
@@ -1,1 +1,5 @@
-<button type="submit" (click)="tareasSinHacer()">Mostrar tareas sin completar</button>
+<div class="container">
+  <button type="submit" (click)="tareasSinHacer()">Mostrar tareas sin completar</button>
+  <button type="submit" (click)="tareasHechas()">Mostrar tareas completadas</button>
+  <button type="submit" (click)="todasTareas()">Mostrar todas las tareas</button>
+</div>
