--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <crear-tarea (insertarTarea)="nuevaTarea($event)"></crear-tarea>
   <br>
   <div class="nuevoListado">
-    <no-completadas (taskIncomplete)="tasksIncomplete()"></no-completadas>
+    <no-completadas (taskIncomplete)="tasksIncomplete()" (taskComplete)="tasksComplete()" (allTasks)="allTask()"></no-completadas>
   </div>
   <div class="lista-tareas">
     <listado-tareas [arrData]="tasks"></listado-tareas>
