--- a/src/app/no-completadas/no-completadas.component.html
+++ b/src/app/no-completadas/no-completadas.component.html
@@ -2,4 +2,5 @@
   <button type="submit" (click)="tareasSinHacer()">Mostrar tareas sin completar</button>
   <button type="submit" (click)="tareasHechas()">Mostrar tareas completadas</button>
   <button type="submit" (click)="todasTareas()">Mostrar todas las tareas</button>
+  <input placeholder="Buscar..." type="text" name="filtrar" [(ngModel)]="text" (keyup)="buscar()">
 </div>
